samples/_failures_safe/1761211388_bbd6f4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_18126d2e.c: In function ‘main’:
./samples/SAFE/__tmp_18126d2e.c:154:5: error: expected declaration or statement at end of input
  154 |     if (len == 0) {
      |     ^~
./samples/SAFE/__tmp_18126d2e.c:154:5: error: expected declaration or statement at end of input
